added newStuff_ltx folder to hold lit review for new things; made some final edits on paper

--- a/ltx/paper_refs.bib
+++ b/ltx/paper_refs.bib
@@ -16,7 +16,7 @@
 
 % griffin and steel, introducing dependent dirichlet processes
 @article{griffin2006order,
-  title={Order-based dependent Dirichlet processes},
+  title={Order-based dependent {D}irichlet processes},
   author={Griffin, J.E. and Steel, M.F.J.},
   journal={Journal of the American statistical Association},
   volume={101},
@@ -28,7 +28,7 @@
 
 % (unsupervised) object detection with gabor filters
 @article{jain1997object,
-  title={Object detection using Gabor filters},
+  title={Object detection using {G}abor filters},
   author={Jain, A.K. and Ratha, N.K. and Lakshmanan, S.},
   journal={Pattern Recognition},
   volume={30},
@@ -40,13 +40,13 @@
 
 % bayesian hierarchical model for clustering scene types
 @inproceedings{fei2005bayesian,
-  title={A bayesian hierarchical model for learning natural scene categories},
+  title={A {B}ayesian hierarchical model for learning natural scene categories},
   author={Fei-Fei, L. and Perona, P.},
   booktitle={Computer Vision and Pattern Recognition, 2005. CVPR 2005. IEEE Computer Society Conference on},
   volume={2},
   pages={524--531},
   year={2005},
-  organization={Ieee}
+  organization={IEEE}
 }
 
 % unsupervised method (pLSA) to find different object types in images
@@ -222,7 +222,7 @@
 }
 %clustering trajectories
 @inproceedings{brostow2006unsupervised,
-  title={Unsupervised bayesian detection of independent motion in crowds},
+  title={Unsupervised {B}ayesian detection of independent motion in crowds},
   author={Brostow, G.J. and Cipolla, R.},
   booktitle={Computer Vision and Pattern Recognition, 2006 IEEE Computer Society Conference on},
   volume={1},
@@ -245,13 +245,14 @@ author={Paragios, N. and Deriche, R.},
 journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
 title={Geodesic active contours and level sets for the detection and tracking of moving objects}, 
 year={2000}, 
-month={mar}, 
+month={Mar}, 
 volume={22}, 
 number={3}, 
 pages={266 -280}, 
-keywords={Hermes;edge detection;front propagation;geodesic active contours;image sequences;level set theory;motion detection;moving object tracking;objective function;optimisation;statistical analysis;edge detection;image sequences;motion estimation;optimisation;statistical analysis;target tracking;}, 
-doi={10.1109/34.841758}, 
-ISSN={0162-8828},}
+keywords={Hermes;edge detection;front propagation;geodesic active contours;image sequences;level set theory;motion detection;moving object tracking;objective function;optimisation;statistical analysis;edge detection;image sequences;motion estimation;optimisation;statistical analysis;target tracking;},
+}
+% doi={10.1109/34.841758}, 
+% ISSN={0162-8828}
 
 
 % gelman book
@@ -272,7 +273,7 @@ ISSN={0162-8828},}
   booktitle={Image and Signal Processing and Analysis, 2005. ISPA 2005. Proceedings of the 4th International Symposium on},
   pages={64--69},
   year={2005},
-  organization={Ieee}
+  organization={IEEE}
 }
 
 
@@ -328,7 +329,7 @@ ISSN={0162-8828},}
   volume={4},
   pages={3099--3104},
   year={2004},
-  organization={Ieee}
+  organization={IEEE}
 }
 
 @article{zhang2001segmentation,
@@ -371,25 +372,24 @@ ISSN={0162-8828},}
   volume={}, 
   number={}, 
   pages={1629 -1632}, 
-  keywords={SVR particle filter;automatic multiplayer detection;playfield segmentation;sequential Monte Carlo framework;sports video broadcasting;support vector machine;support vector regression;tracking approach;Monte Carlo methods;digital video broadcasting;image segmentation;object detection;sport;support vector machines;tracking filters;video signal processing;}, 
-  doi={10.1109/ICME.2006.262859}, 
+  keywords={SVR particle filter;automatic multiplayer detection;playfield segmentation;sequential Monte Carlo framework;sports video broadcasting;support vector machine;support vector regression;tracking approach;Monte Carlo methods;digital video broadcasting;image segmentation;object detection;sport;support vector machines;tracking filters;video signal processing;},
   ISSN={}
 }
+ % doi={10.1109/ICME.2006.262859}, 
 
 @ARTICLE{leibe2008coupled, 
   author={Leibe, B. and Schindler, K. and Cornelis, N. and Van Gool, L.}, 
   journal={Pattern Analysis and Machine Intelligence, IEEE Transactions on}, 
   title={Coupled Object Detection and Tracking from Static Cameras and Moving Vehicles}, 
   year={2008}, 
-  month={oct. }, 
+  month={Oct. }, 
   volume={30}, 
   number={10}, 
   pages={1683 -1698}, 
-  keywords={conservative hypothesis pruning;coupled object detection;incremental computation;minimum description length hypothesis selection framework;multiobject tracking;multiview-multicategory object recognition;object tracking;scene geometry;spacetime trajectory estimation;state-of-the-art object detector;static cameras;subsequent trajectory estimation module;surveillance-type scenario;vehicle passing;video sequences;cameras;image resolution;image sensors;image sequences;object detection;object recognition;tracking;video signal processing;Algorithms;Artificial Intelligence;Image Enhancement;Image Interpretation, Computer-Assisted;Imaging, Three-Dimensional;Motion;Motor Vehicles;Pattern Recognition, Automated;Photography;Reproducibility of Results;Sensitivity and Specificity;}, 
-  doi={10.1109/TPAMI.2008.170}, 
-  ISSN={0162-8828}
+  keywords={conservative hypothesis pruning;coupled object detection;incremental computation;minimum description length hypothesis selection framework;multiobject tracking;multiview-multicategory object recognition;object tracking;scene geometry;spacetime trajectory estimation;state-of-the-art object detector;static cameras;subsequent trajectory estimation module;surveillance-type scenario;vehicle passing;video sequences;cameras;image resolution;image sensors;image sequences;object detection;object recognition;tracking;video signal processing;Algorithms;Artificial Intelligence;Image Enhancement;Image Interpretation, Computer-Assisted;Imaging, Three-Dimensional;Motion;Motor Vehicles;Pattern Recognition, Automated;Photography;Reproducibility of Results;Sensitivity and Specificity;},
 }
-
+% doi={10.1109/TPAMI.2008.170},
+% ISSN={0162-8828}
 
 
 
@@ -477,9 +477,8 @@ volume={2},
 number={}, 
 pages={321 -328 vol.2}, 
 keywords={3-D human motion;HMC filter;Monte Carlo filtering;hidden state estimation;multiple Markov chains;nonlinear dynamical systems;people tracking;Markov processes;Monte Carlo methods;motion estimation;nonlinear dynamical systems;state estimation;tracking;}, 
-doi={10.1109/ICCV.2001.937643}, 
 ISSN={},}
-
+%doi={10.1109/ICCV.2001.937643}, 
 
 % fwood, a nonparametric bayesian alternative to spike sorting
 
@@ -491,14 +490,56 @@ number = "1",
 pages = "1 - 12",
 year = "2008",
 note = "",
-issn = "0165-0270",
-doi = "10.1016/j.jneumeth.2008.04.030",
-url = "http://www.sciencedirect.com/science/article/pii/S0165027008002549",
 author = "Frank Wood and Michael J. Black",
 keywords = "Spike sorting",
 keywords = "Nonparametric Bayesian methods",
 keywords = "Dirichlet process mixture models"
 }
+% doi = "10.1016/j.jneumeth.2008.04.030",
+% url = "http://www.sciencedirect.com/science/article/pii/S0165027008002549",
+% issn = "0165-0270",
+
+
+
+
+% articulated pose prediction / new stuff
+
+@phdthesis{Sigal:2008:CGM:1467812,
+ author = {Sigal, Leonid},
+ advisor = {Black, Michael J.},
+ title = {Continuous-state graphical models for object localization, pose estimation and tracking},
+ year = {2008},
+ isbn = {978-0-549-67728-4},
+ note = {AAI3318361},
+ publisher = {Brown University},
+ address = {Providence, RI, USA},
+} 
+
+@INPROCEEDINGS{Sudderth04distributedocclusion,
+    author = {Erik B. Sudderth and Michael I. M and William T. Freeman and Alan S. Willsky},
+    title = {Distributed occlusion reasoning for tracking with nonparametric belief propagation},
+    booktitle = {In NIPS},
+    year = {2004},
+    pages = {1369--1376},
+    publisher = {MIT Press}
+}
+
+@INPROCEEDINGS{wu2003tracking, 
+author={Ying Wu and Gang Hua and Ting Yu}, 
+booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on}, 
+title={Tracking articulated body by dynamic Markov network}, 
+year={2003}, 
+month={oct.}, 
+volume={}, 
+number={}, 
+pages={1094 -1101 vol.2}, 
+keywords={Bayesian inference problem;articulated body tracking;automatic video footage;dynamic Markov network;mean field Monte Carlo algorithms;mean time structural constraints;object tracking;particle filters;perceptual interfaces;smart video surveillance;visual tracking;Bayes methods;Markov processes;Monte Carlo methods;computer vision;maximum likelihood estimation;object detection;optical tracking;}, 
+doi={10.1109/ICCV.2003.1238471}, 
+ISSN={},}
+
+
+
+
 
 
 
@@ -575,7 +616,7 @@ keywords = "Dirichlet process mixture models"
 	
 	
 	@article{khan_2004,
-  title={An MCMC-based particle filter for tracking multiple interacting targets},
+  title={An {MCMC}-based particle filter for tracking multiple interacting targets},
   author={Khan, Z. and Balch, T. and Dellaert, F.},
   journal={Computer Vision-ECCV 2004},
   pages={279--290},
@@ -661,9 +702,9 @@ keywords = "Dirichlet process mixture models"
 		volume={25}, 
 		number={5}, 
 		pages={ 564 - 577}, 
-		keywords={ Bhattacharyya coefficient; Kalman tracking; background information; basin of attraction; camera motion; clutter; data association techniques; face tracking; feature histogram-based target representation; gradient-based optimization; isotropic kernel; kernel-based object tracking; local maxima; mean shift procedure; partial occlusion; spatial masking; spatially-smooth similarity functions; target localization; visual tracking; computer vision; image motion analysis; image representation; object recognition; optimisation; tracking;}, 
-		doi={10.1109/TPAMI.2003.1195991}, 
-		ISSN={0162-8828},}
+		keywords={ Bhattacharyya coefficient; Kalman tracking; background information; basin of attraction; camera motion; clutter; data association techniques; face tracking; feature histogram-based target representation; gradient-based optimization; isotropic kernel; kernel-based object tracking; local maxima; mean shift procedure; partial occlusion; spatial masking; spatially-smooth similarity functions; target localization; visual tracking; computer vision; image motion analysis; image representation; object recognition; optimisation; tracking;},}
+    %doi={10.1109/TPAMI.2003.1195991}, 
+    ISSN={0162-8828}
 		
 		
 		% heirarchical mean-shift idea for spatio-temporal segmentation of video  - they cluster 7D data (R, G, B, d1, d1, motionangle1, motionangle2). good overview of terms at beginning. clustering is done using mean shift over increasingly larger ranges, using at each pass the cluster centers from previous pass with weights equal to number of points in cluster. applications are compression / compact scene descriptions.
@@ -710,7 +751,7 @@ keywords = "Dirichlet process mixture models"
 		@article{perez_2002,
 		  title={Color-based probabilistic tracking},
 		  author={P{\'e}rez, P. and Hue, C. and Vermaak, J. and Gangnet, M.},
-		  journal={Computer VisionóECCV 2002},
+		  journal={Computer Vision-ECCV 2002},
 		  pages={661--675},
 		  year={2002},
 		  publisher={Springer}
@@ -891,7 +932,7 @@ keywords = "Dirichlet process mixture models"
 		% bramble
 		
 		@inproceedings{isard_2001,
-		  title={BraMBLe: A Bayesian multiple-blob tracker},
+		  title={BraMBLe: A {B}ayesian multiple-blob tracker},
 		  author={Isard, M. and MacCormick, J.},
 		  booktitle={Computer Vision, 2001. ICCV 2001. Proceedings. Eighth IEEE International Conference on},
 		  volume={2},
@@ -1401,7 +1442,7 @@ keywords = "Dirichlet process mixture models"
 		
 		@INPROCEEDINGS{caron_2007,
 		  author = {Caron, F. and Davy, M. and Doucet, A.},
-		  title = {Generalized Polya Urn for Time-varying {D}irichlet Process Mixtures},
+		  title = {Generalized {P}olya Urn for Time-varying {D}irichlet Process Mixtures},
 		  booktitle = {23rd Conference on Uncertainty in Artificial Intelligence (UAI'2007),
 			Vancouver, Canada, July 2007},
 		  year = {2007}
@@ -1413,7 +1454,7 @@ keywords = "Dirichlet process mixture models"
 		% original introduction/presentation of the Dirichlet process
 		
 		@article{ferguson_1973,
-		  title={A Bayesian analysis of some nonparametric problems},
+		  title={A {B}ayesian analysis of some nonparametric problems},
 		  author={Ferguson, T.S.},
 		  journal={The annals of statistics},
 		  pages={209--230},
