--- a/ltx/paper_short_2.tex
+++ b/ltx/paper_short_2.tex
@@ -77,7 +77,7 @@ A great deal of research has focused on developing algorithms to track multiple 
 
 Over the past decade, there have been attempts to provide general algorithms for the fully unsupervised detection and tracking of arbitrary objects in videos. Blob tracking, a basic method for carrying out this goal, has found success in videos where objects are easily isolated from the background and where localization and segmentation of distinct objects is possible \cite{francois2004real, isard_2001}. Blob tracking methods, however, run into problems when faced with videos where detection is difficult, object appearance or orientation varies heavily, and there exists object occlusion \cite{song2005model}. To aid the accuracy of these methods, techniques have been developed for performing extraction and segmentation in a joint manner, incorporating statistical methods for maintaining hypotheses of different numbers of detected objects, and introducing some of the multi-object tracking methods described previously to track distinct blobs after they have been segmented \cite{collins2003mean, isard_2001}. Another family of methods related to the task of unsupervised detection and tracking of video objects goes under the heading of video segmentation algorithms---these methods extend single-frame image segmentation to maintain coherence of image segments over time, and have had some success when used for the explicit purpose of detecting and tracking foreground objects in videos \cite{brox2003unsupervised, sista2000unsupervised, wang1998unsupervised}. Other attempts to perform unsupervised detection and tracking include methods for clustering short sequences of positions extracted by detecting the motion of objects \cite{brostow2006unsupervised, brox2010object}, which aim to return full-length distinct object tracks, and graph based methods that carry out a similar task using spectral clustering \cite{fragkiadaki2011detection}. Another approach uses a Gaussian mixture model to cluster data extracted from moving objects \cite{pece_2002}; this method also develops heuristics for the initialization and elimination of new object tracks. 
 
-Nearly all high accuracy object detection and tracking methods are those tailored for specific object types. These methods rely on ad-hoc detection criteria that exploit knowledge about the appearance or behavior of the objects in a video. Some of these methods make use of state-of-the-art detectors designed to locate the specified objects of interest. In contrast, the method described in this paper is designed to track arbitrary objects without using any explicit detection criteria, and serve as a general strategy that can be used, without modification, to perform accurate detection and tracking of diverse objects in a wide range of videos. The technique we introduce falls into the category of clustering-based arbitrary object detection and tracking methods. Differing from previous work, we use a type of time dependent Bayesian nonparametric mixture model, and show how it can be applied to a variety of easily extracted data to perform detection and tracking. This method begins by performing a simple data extraction procedure that yields noisy data. Our model of this data serves as a general framework for which we can choose a variety of object appearance distributions and inference algorithms; each choice provides a new method for unsupervised detection and tracking of arbitrary objects in videos.
+Nearly all high accuracy object detection and tracking methods are those tailored for specific object types. These methods rely on detection criteria that exploit knowledge about the appearance or behavior of the objects in a video. Some of these methods make use of state-of-the-art detectors designed to locate the specified objects of interest. In contrast, the method described in this paper is designed to track arbitrary objects without using any explicit detection criteria, and serve as a general strategy that can be used, without modification, to perform accurate detection and tracking of diverse objects in a wide range of videos. The technique we introduce falls into the category of clustering-based arbitrary object detection and tracking methods. Differing from previous work, we use a type of time dependent Bayesian nonparametric mixture model, and show how it can be applied to a variety of easily extracted data to perform detection and tracking. This method begins by performing a simple data extraction procedure that yields noisy data. Our model of this data serves as a general framework for which we can choose a variety of object appearance distributions and inference algorithms; each choice provides a new method for unsupervised detection and tracking of arbitrary objects in videos.
 
 
 % Frame Diff and Longimg figure
@@ -121,7 +121,7 @@ We desire a data extraction procedure that yields observations of the form
 \end{equation}
 where each $\bold{x}$ corresponds to a point within an image region where an object (or foreground element)  is believed to exist, $\bold{x}^{s} \in \mathbb{R}^{2}$ denotes the spatial location of this point, $\bold{x}^{c} \in S_{1} \times \ldots \times S_{V}$ denotes some collection of local image features in the vicinity of this point, and $t \in \{1, \ldots, T \}$ denotes the time index.
 
-We'd like to use an extraction procedure that is as unsophisticated as possible. Consequently, we use frame differencing. This procedure locates the pixels in image regions that display motion. Specifically, at each frame the pixels that differ from the previous frame beyond some threshold are recorded. Here, each pixel corresponds to an observation $\bold{x}$. Frame differencing is simple, computationally inexpensive, and able to be applied to a wide range of static, single-camera videos (the videos used in experiments are stationary; moving-camera videos require data extraction methods useful for non-stationary video \cite{chien2002efficient, zhang2007moving}). Examples of pixel location data extracted via frame differencing are shown in Figure~\ref{fig:img_and_framediff}(a-j).
+We'd like to use an extraction procedure that is as unsophisticated as possible. Consequently, we use frame differencing. This procedure locates the pixels in image regions that undergo change. Specifically, at each frame the pixels that differ from the previous frame beyond some threshold are recorded. Here, each pixel corresponds to an observation $\bold{x}$. Frame differencing is simple, computationally inexpensive, and able to be applied to a wide range of static, single-camera videos (the videos used in experiments are stationary; moving-camera videos require data extraction methods useful for non-stationary video \cite{chien2002efficient, zhang2007moving}). Examples of pixel location data extracted via frame differencing are shown in Figure~\ref{fig:img_and_framediff}(a-j).
 
 We also extract features $\bold{x}^{c}$ that capture image information in the vicinity of each extracted pixel. Examples of possible features include color distributions, pixel intensity values, feature point (such as corner, shape, or edge) locations or spatial characteristics, and texture representations. In principle, we can extract any image features that may be used to characterize the appearance of objects. In our implementation, we choose to extract only color information in the vicinity of each pixel. Incorporating color features allows our method to infer a distribution over color for each detected object; this improves its ability to distingush between adjacent objects and track objects through occlusion. To add this information, we let $\bold{x}^{c}$ represent a $V$ dimensional discrete distribution over some aspect of color (such as the hue) in the pixel's immediate vicinity. Details on this vector and how it is computed are given in Section~\ref{sec:dataextractioninexperiments}. We refer to the components of this vector as the ``color counts'' of the pixel.
 
@@ -231,7 +231,7 @@ $\forall$ times $t \in \{1, \ldots, T\}$ and each cluster $k \in \{ 1, \ldots, K
 Sections~\ref{sec:objectappearance}-\ref{sec:motionmodel} detail the object representation distributions chosen to fully specify our implementation of the GPUDDPM. This specification is used for all experiments in Section~\ref{sec:experiments}. The distributions F, $\mathbb{G}_{0}$, and $P(\theta_{k, t} | \theta_{k, t-1})$ represent object appearance, the appearance prior, and object movement, respectively. Our specification is kept general to allow for wide applicability, though one could choose to incorporate known object appearance or motion information for a specific tracking application in future studies.
 
 
-\subsection{Object Appearance and Mixture Component F}
+\subsection{Object Appearance and Mixture Component, F}
 \label{sec:objectappearance}
 
 At a given time $t$, we model each observation $\bold{x} \in \bold{X}$ as a draw from the product of a multivariate normal and multinomial distribution
@@ -244,7 +244,7 @@ where $\theta = \{ \boldsymbol{\mu}, \Sigma, \bold{p} \}$ denotes the parameters
 The multivariate normal distribution over the spatial features $\bold{x}^{s}$ models the position and spatial extent of an object. It can be thought intuitively to represent the shape of each object as an oval. We model the color features $\bold{x}^{c}$ as draws from a multinomial distribution. Incorporating this distribution into our cluster likelihood allows us to exploit our observation that the pixels associated with distinct objects tend to have similar color count vectors.
 
 
-\subsection{Appearance Prior and Base Distribution $\mathbb{G}_{0}$}
+\subsection{Appearance Prior and Base Distribution, $\mathbb{G}_{0}$}
 \label{sec:appearanceprior}
 
 $\mathbb{G}_{0}$ denotes the base distribution of the DDPM; it also serves as a prior distribution for the parameters $\theta = \{ \boldsymbol{\mu}, \Sigma, \bold{p} \}$ of the mixture components (i.e. of the object appearance distributions). We use conjugate priors in the base distribution to allow for more efficient computation. Specifically, in our implementation, a normal-inverse-Wishart prior is placed on the multivariate normal parameters $\{ \boldsymbol{\mu}, \Sigma \}$, and a Dirichlet prior is placed on the multinomial parameter $\bold{p}$. The prior can therefore be written
@@ -255,7 +255,7 @@ $\mathbb{G}_{0}$ denotes the base distribution of the DDPM; it also serves as a 
 where $\mathcal{N}i\mathcal{W}$ denotes the normal-inverse-Wishart distribution, $\mathcal{D}ir$ denotes the Dirichlet distribution, and the prior has the hyperparameters $\boldsymbol{\mu}_{0}, \kappa_{0}, \nu_{0}, \Lambda_{0}$ and $\bold{q}_{0}$.
 
 
-\subsection{Motion Model and Transition Kernel $P(\theta_{t} | \theta_{t-1})$}
+\subsection{Motion Model and Transition Kernel, $P(\theta_{t} | \theta_{t-1})$}
 \label{sec:motionmodel}
 
 The transition kernel $P(\theta_{t} | \theta_{t-1})$ represents how we expect tracked objects to move over time. Since our implementation is intended for tracking arbitrary objects, we do not wish to make sophisticated assumptions about object motion. For example, we choose not to incorporate complex objects dynamics, though they are often used with success in certain object-specific tracking tasks, such as people tracking \cite{choo2001people, conte2010performance}. We assume only that the position of an object at a given time is close to its position at the previous time, and that the position varies in all directions equally between time steps.
@@ -311,8 +311,8 @@ The object appearance prior parameters include:
 \hline
 $\boldsymbol{\mu}_{0} \in \mathbb{R}^{2}$  &  Mean position prior. In experiments performed in Section~\ref{sec:experiments} the data was recentered to the origin, and this parameter was set to $(0,0)$. \\ \hline
 $\kappa_{0} \in \mathbb{R}$  &  Scale factor of the mean prior.\\ \hline
-$\Lambda_{0} \in \mathbb{R}^{2\times2}$  &  Shape factor of the covariance prior.\\ \hline
-$\nu_{0} \in \mathbb{Z}_{+} \backslash \{ 1 \}$  &  Scale factor of the covariance prior.\\ \hline
+$\Lambda_{0} \in \mathbb{R}^{2 \times 2}$  &  Shape factor of the covariance prior.\\ \hline
+$\nu_{0} \in \mathbb{Z}_{+} > 1$  &  Scale factor of the covariance prior.\\ \hline
 $\bold{q}_{0} \in \mathbb{R}_{+}^{V}$  &  Scale factor of the multinomial prior. \\
 \hline
 \end{tabular}
@@ -612,7 +612,7 @@ where $\bold{c}_{t} = c_{1:N_{t},t}$, $\Theta_{t} = \theta_{1:K_{t},t}$, and $\b
 \ENDIF
 \ENDFOR
 \ENDFOR
-\STATE $\tilde{w}_{t}^{(l)} \leftarrow w_{t-1}^{(l)} \times \frac{ P(\bold{x}_{1:N_{t},t}, c_{1:N_{t}, t}^{(l)} | \theta_{1:K_{t}^{(l)}}, m_{1:K_{t},t}^{(l)})} {P(c_{1:N_{t}, t}^{(l)} | m_{t}^{(l)}, \theta_{t-1}^{(l)}, \bold{x}_{1:N_{t},t} ) } \times r $  % \hfill $\triangleright$ eq.~\eqref{smc_weight_eqn}
+\STATE $\tilde{w}_{t}^{(l)} \leftarrow w_{t-1}^{(l)} \times \frac{ P(\bold{x}_{1:N_{t},t}, c_{1:N_{t}, t}^{(l)} | \theta_{1:K_{t}^{(l)}}, m_{1:K_{t},t}^{(l)})} {P(c_{1:N_{t}, t}^{(l)} | m_{t}^{(l)}, \theta_{t-1}^{(l)}, \bold{x}_{1:N_{t},t} ) } $% \times r $  % \hfill $\triangleright$ eq.~\eqref{smc_weight_eqn}
 \ENDFOR
 \FOR {l = 1 : L}
 \STATE $w_{t}^{(l)} \leftarrow \frac{\tilde{w}_{t}^{(l)}}{\sum_{l=1}^{L} \tilde{w}_{t}^{(l)} }$   \hfill $\triangleright$ normalize weights
@@ -821,7 +821,7 @@ To calculate performance metrics (both SFDA and ATA), one must specify a confide
 
 A video dataset used in both the PETS2009 and PETS-\\2010 conferences, called ``S2.L1 at time sequence 12.34'' was chosen for experimentation due to its prominence in a number of studies \cite{ellis_2010,arsic2009multi,berclaz2009multiple,conte2010performance,bolme2009simple,breitenstein2009markovian,ge2009evaluation,alahi2009sparsity,yang2009probabilistic}. This dataset consists of a monocular, stationary camera, 794 frame video sequence. The entire video sequence was used in this experiment. 
 
-Due to the large number of frames and objects in this video, the SMC algorithm (described in Section~\ref{sec:SMC}) was used for inference. This method of sequential inference was observed, on this dataset, to converge to a better sample in a shorter period of time in comparison with the MCMC algorithm; for this reason, we found that it was better suited for this large dataset.
+Due to the large number of frames and objects in this video, the SMC algorithm (described in Section~\ref{sec:SMC}) was used for inference. This method of sequential inference was observed, on this dataset, to converge to a better sample in a shorter period of time in comparison with the MCMC algorithm.
 
 Extraction was performed with frame differencing as described in Section~\ref{sec:dataextractioninexperiments}, using $L=3$, and parameters for the model were chosen to be $\alpha = 0.1, \rho = 0.8, M = 10, \boldsymbol{\mu}_{0} = (0,0), \kappa_{0} = 0.05, \nu_{0} = 6, \Lambda_{0} = \left( \begin{smallmatrix} 1&0\\ 0&1 \end{smallmatrix} \right), \text{ and } q_{0} = (3, \ldots, 3)$. Additionally, as with the other video datasets, ground-truth bounding boxes around each object were authored using the ViPER tool.
 
@@ -908,7 +908,7 @@ The SFDA and ATA achieve their maximal values at different $\alpha$ and $\rho$ p
 \section{Conclusion}
 \label{sec:conclusion}
 
-We have presented a new model for the unsupervised detection and tracking of arbitrary objects in vid-\\eos. The primary intention of this technique is to reduce the need for detection or localization methods tailored to specific object types and serve as a general framework applicable to videos with varied objects, backgrounds, and film qualities. The GPUDDPM, a time-dependent Dirichlet process mixture, has been introduced, and we have shown how inference on this model allows us to achieve detection and tracking results. Furthermore, we have demonstrated a specific implementation of the model using spatial and color pixel data extracted via frame differencing and provided two algorithms for performing Bayesian inference on the model to accomplish detection and tracking. Both algorithms were carried out on multiple synthetic and benchmark multi-object video datasets in order to demonstrate an ability to accomplish unsupervised detection and tracking of arbitrary objects in both manufactured and real world settings. We have described and computed standard performance metrics for our technique's detection and tracking results, and found it to be comparable with state-of-the-art object-specific detection and tracking methods designed for people tracking in the PETS2009/2010 video dataset. Results from the synthetic and benchmark video datasets illustrate the ability of the technique described in this paper to, without modification, perform completely unsupervised detection and tracking of objects with diverse physical charactersitics moving over non-uniform backgrounds and through occlusion.
+We have presented a new model for the unsupervised detection and tracking of arbitrary objects in videos. The primary intention of this technique is to reduce the need for detection or localization methods tailored to specific object types and serve as a general framework applicable to videos with varied objects, backgrounds, and film qualities. The GPUDDPM, a time-dependent Dirichlet process mixture, has been introduced, and we have shown how inference on this model allows us to achieve detection and tracking results. Furthermore, we have demonstrated a specific implementation of the model using spatial and color pixel data extracted via frame differencing and provided two algorithms for performing Bayesian inference on the model to accomplish detection and tracking. Both algorithms were carried out on multiple synthetic and benchmark multi-object video datasets in order to demonstrate an ability to accomplish unsupervised detection and tracking of arbitrary objects in both manufactured and real world settings. We have described and computed standard performance metrics for our technique's detection and tracking results, and found it to be comparable with state-of-the-art object-specific detection and tracking methods designed for people tracking in the PETS2009/2010 video dataset. Results from the synthetic and benchmark video datasets illustrate the ability of the technique described in this paper to, without modification, perform completely unsupervised detection and tracking of objects with diverse physical charactersitics moving over non-uniform backgrounds and through occlusion.
 
 % More to include: more discussion of parameter choices, thoughts about deletion params vs. dataset size (and the tradeoff between tracking through occlusion vs clusters rapidly gaining size), mvn cluster size vs. tracking in occlusion vs. sampling correct number of objects. discuss how we detect movement, which isn’t exactly same as authors in the perf. metric paper (ie our tracking is designed to stop if people stop moving). objects hard to track through occlusion becuase they are small, similar appearance, and our algorithm doesn’t assume dynamics to keep robust (we could, probably for better accuracy but less generality). background (appearance) is like a natural prior 
 
@@ -925,6 +925,9 @@ We have presented a new model for the unsupervised detection and tracking of arb
 % --------------
 
 \appendix
+
+% to push this onto new page--should probably change if draft changes significantly
+\newpage
 
 \section{-  Appendix: Model Background}
 \label{sec:modelbackground}
